# FreeRTOS-Plus

./: .gitmodules  README.md
FreeRTOS+FAT+CLI/portable/RP2040/: hw_config.h  sd_card.h  spi.c
application/: CMakeLists.txt  application.c  filesystem_cmds.c  hw_config.c  stdio_cli.c
design/DrillFiles/: drill_1_16.xln
design/GerberFiles/: copper_bottom.gbr  copper_top.gbr  profile.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr
example/: CMakeLists.txt  data_log_demo.c  example.c  filesystem_cmds.c  hw_config.c  stdio_cli.c
freertos/: CMakeLists.txt
freertos/include/: FreeRTOSConfig.h  FreeRTOSFATConfig.h  FreeRTOSIPConfig.h  FreeRTOS_CLI.h  ff_utils.h  my_debug.h  pack_struct_end.h  pack_struct_start.h  stdio_cli.h  util.h
freertos/portable/RP2040/: demo_logging.c  ff_sddisk.c  sd_card.c  sd_spi.c  sd_spi.h  spi.c  spi.h  spi.simple.c
freertos/src/: CLI-commands.c  File-related-CLI-commands.c  FreeRTOS_CLI.c  crash.c  ff_utils.c  my_debug.c
