add_library(FreeRTOS+FAT+CLI INTERFACE)
target_sources(FreeRTOS+FAT+CLI INTERFACE
        ${FREERTOS_KERNEL_PATH}/event_groups.c
        ${FREERTOS_KERNEL_PATH}/list.c
        ${FREERTOS_KERNEL_PATH}/queue.c
        ${FREERTOS_KERNEL_PATH}/stream_buffer.c
        ${FREERTOS_KERNEL_PATH}/tasks.c
        ${FREERTOS_KERNEL_PATH}/timers.c 
        #FreeRTOS-Kernel/portable/GCC/ARM_CM0_RP2040/port.c 
        #FreeRTOS-Kernel/portable/GCC/ARM_CM0/port.c 
        ${FREERTOS_KERNEL_PATH}/${FREERTOS_KERNEL_RP2040_RELATIVE_PATH}/port.c
        ${FREERTOS_KERNEL_PATH}/portable/MemMang/heap_4.c 
        ../FreeRTOS-Plus-FAT/ff_crc.c
        ../FreeRTOS-Plus-FAT/ff_dir.c
        ../FreeRTOS-Plus-FAT/ff_error.c
        ../FreeRTOS-Plus-FAT/ff_fat.c
        ../FreeRTOS-Plus-FAT/ff_file.c
        ../FreeRTOS-Plus-FAT/ff_format.c
        ../FreeRTOS-Plus-FAT/ff_ioman.c
        ../FreeRTOS-Plus-FAT/ff_locking.c
        ../FreeRTOS-Plus-FAT/ff_memory.c
        ../FreeRTOS-Plus-FAT/ff_stdio.c
        ../FreeRTOS-Plus-FAT/ff_string.c
        ../FreeRTOS-Plus-FAT/ff_sys.c
        ../FreeRTOS-Plus-FAT/ff_time.c 
        ../FreeRTOS-Plus-TCP/FreeRTOS_ARP.c
        ../FreeRTOS-Plus-TCP/FreeRTOS_DHCP.c
        ../FreeRTOS-Plus-TCP/FreeRTOS_DNS.c
        ../FreeRTOS-Plus-TCP/FreeRTOS_IP.c
        ../FreeRTOS-Plus-TCP/FreeRTOS_Sockets.c
        ../FreeRTOS-Plus-TCP/FreeRTOS_Stream_Buffer.c
        ../FreeRTOS-Plus-TCP/FreeRTOS_TCP_IP.c
        ../FreeRTOS-Plus-TCP/FreeRTOS_TCP_WIN.c
        ../FreeRTOS-Plus-TCP/FreeRTOS_UDP_IP.c
        portable/RP2040/sd_spi.c
        portable/RP2040/ff_sddisk.c
        portable/RP2040/spi.c
        portable/RP2040/sd_card.c
        portable/RP2040/crc.c
        src/my_debug.c
        src/FreeRTOS_time.c
        #src/stdio_cli.c
        src/crash.c
        src/CLI-commands.c
        src/ff_utils.c
        src/File-related-CLI-commands.c
        src/FreeRTOS_CLI.c
)
target_link_libraries(FreeRTOS+FAT+CLI INTERFACE
        FreeRTOS-Kernel
        FreeRTOS-Kernel-Heap4
        pico_multicore
        hardware_adc
        hardware_spi
        hardware_dma
        hardware_clocks
        hardware_rtc
        hardware_timer
        pico_stdlib
)
target_include_directories(FreeRTOS+FAT+CLI INTERFACE 
        include/ 
        ../FreeRTOS-Plus-FAT/include/
        ../FreeRTOS-Plus-TCP/include/
        portable/RP2040/
        ${FREERTOS_KERNEL_PATH}/include 
        ${FREERTOS_KERNEL_PATH}/${FREERTOS_KERNEL_RP2040_RELATIVE_PATH}/include
)
